--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -56,7 +56,10 @@
    "id": "06f93c04-aeda-4547-8924-b06e943bb0d8",
    "metadata": {},
    "source": [
-    "Data Science Tools | JupyterLab | Anaconda | VSCode"
+    "| Data Science Tools | \n",
+    "| JupyterLab | \n",
+    "| Anaconda | \n",
+    "| VSCode |"
    ]
   },
   {
